--- a/nextAuthApp/package.json
+++ b/nextAuthApp/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.7",
     "nookies": "^2.5.2",
     "react": "18.2.0",
